ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: agrilink
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pi
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8084
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
